--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 						</header>
 
 						<hr/>
-						<a href="https://drive.google.com/open?id=0B0OZD1XRjVcNNXA0ak1BRUVIcXc" target="_blank">- CV</a><br>
-						<a href="https://drive.google.com/open?id=0B0OZD1XRjVcNYlBadzBITHE0R1E" target="_blank">- Past Projects</a>
+						<a href="https://drive.google.com/file/d/0B0OZD1XRjVcNNXA0ak1BRUVIcXc/view?usp=sharing" target="_blank">- CV</a><br>
+						<a href="https://drive.google.com/file/d/0B0OZD1XRjVcNYlBadzBITHE0R1E/view?usp=sharing" target="_blank">- Past Projects</a>
 						<hr />
 
 						<footer>
